--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,9 +15,13 @@
         "@types/node": "^18.14.1"
     },
     "dependencies": {
+        "@types/express-fileupload": "^1.4.1",
+        "@types/uuid": "^9.0.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "express-fileupload": "^1.4.0",
         "joi": "^17.8.3",
-        "mysql": "^2.18.1"
+        "mysql": "^2.18.1",
+        "uuid": "^9.0.0"
     }
 }
